# bookmarks

./: .gitignore  CMakeLists.txt  README.md  bookmarks.apparmor  manifest.json.in
po/: Makefile.in.in  POTFILES.in
src/: CMakeLists.txt  client.cpp  client.h  preview.cpp  query.cpp  query.h  scope.cpp  scope.h
src/data/: bookmarks-settings.ini.in  bookmarks.ini.in
